--- a/flutter_moroz_letter_eremin/pubspec.yaml
+++ b/flutter_moroz_letter_eremin/pubspec.yaml
@@ -48,6 +48,8 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^1.1.0
   build_runner: ^2.4.0
+  mockito: ^5.4.0
+  test: ^1.24.0
 
 flutter:
   uses-material-design: true
