--- a/flutter_moroz_letter_eremin/pubspec.yaml
+++ b/flutter_moroz_letter_eremin/pubspec.yaml
@@ -30,18 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+
+  firebase_core: ^2.24.3
+  cloud_firestore: ^4.15.2
+  firebase_storage: ^11.4.4
+  firebase_analytics: ^10.9.0
+  firebase_crashlytics: ^3.3.2
+
   lottie: ^2.7.0
   shared_preferences: ^2.2.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   image_picker: ^1.0.4
-  path_provider: ^2.1.0
-  path: ^1.8.3
-  firebase_core: ^2.24.3
-  cloud_firestore: ^4.15.2
   share_plus: ^7.2.1
   intl: ^0.19.0
+  path_provider: ^2.1.0
+  path: ^1.8.3
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
