--- a/flutter_moroz_letter_eremin/pubspec.yaml
+++ b/flutter_moroz_letter_eremin/pubspec.yaml
@@ -21,12 +21,6 @@ version: 1.0.0+1
 environment:
   sdk: ^3.10.4
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
@@ -51,6 +45,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^4.0.0
   hive_generator: ^2.0.1
   build_runner: ^2.4.0
   mockito: ^5.4.0
