--- a/flutter_moroz_letter_eremin/pubspec.yaml
+++ b/flutter_moroz_letter_eremin/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   share_plus: ^7.2.1
   intl: ^0.19.0
   path_provider: ^2.1.0
+  provider: ^6.1.2
   path: ^1.8.3
   http: ^1.1.0
 
