--- a/flutter_moroz_letter_eremin/pubspec.yaml
+++ b/flutter_moroz_letter_eremin/pubspec.yaml
@@ -24,36 +24,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  firebase_core: ^2.24.3
-  cloud_firestore: ^4.15.2
-  firebase_storage: ^11.4.4
-  firebase_analytics: ^10.9.0
-  firebase_crashlytics: ^3.3.2
-
-  lottie: ^2.7.0
-  shared_preferences: ^2.2.2
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-  image_picker: ^1.0.4
-  share_plus: ^7.2.1
+  sqflite: ^2.3.3
+  path: ^1.9.0
+  path_provider: ^2.1.4
+  image_picker: ^1.0.2
   intl: ^0.19.0
-  path_provider: ^2.1.0
-  provider: ^6.1.2
-  path: ^1.8.3
-  http: ^1.1.0
+  shared_preferences: ^2.2.2
+  flutter_dotenv: ^5.1.0
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
-  hive_generator: ^2.0.1
-  build_runner: ^2.4.0
-  mockito: ^5.4.0
-  test: ^1.24.0
+  sqflite_common_ffi: ^2.2.3
 
 flutter:
   uses-material-design: true
-  
-#  fonts:
-#    - family: Comic
+#  assets:
+#    - assets/images/
+#    - assets/sounds/
+#    - .env
