--- a/flutter_moroz_letter_eremin/pubspec.yaml
+++ b/flutter_moroz_letter_eremin/pubspec.yaml
@@ -40,7 +40,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-#  assets:
+  assets:
 #    - assets/images/
 #    - assets/sounds/
-#    - .env
+    - .env
